<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Color0"  translatable="false">"BLACK"</string>
    <string name="Color1"  translatable="false">"BLUE"</string>
    <string name="Color2"  translatable="false">"RED"</string>
    <string name="Color3"  translatable="false">"GREEN"</string>
    <string name="Color4"  translatable="false">"YELLOW"</string>

    <!-- - - - - - - - - - - -->
    <!--Used by Preferences  -->
    <!-- - - - - - - - - - - -->
    <string name="settings">Settings</string>


    <string name="Owner" translatable="false">"OWNER"</string>
    <string name="Value" translatable="false">"VALUE"</string>
    <string name="IsButtonsEnabled" translatable="false">"IS_BUTTONS_ENABLED"</string>
    <string name="NumberOfPlayers" translatable="false">"NUMBER_OF_PLAYERS"</string>
    <string name="Turn" translatable="false">"TURN"</string>
    <string name="VacantCells" translatable="false">"VACANT_CELLS"</string>

    <string name="Pla1_color_for">. . . color for Player 1</string>
    <string name="Pla1_color_key" translatable="false">Pla1_color_key</string>
    <string name="Pla1_color1_label">Blue</string>
    <string name="Pla1_color1" translatable="false">1</string>
    <string name="Pla1_color2_label">Reed</string>
    <string name="Pla1_color2" translatable="false">2</string>
    <string name="Pla1_color3_label">Green</string>
    <string name="Pla1_color3" translatable="false">3</string>
    <string name="Pla1_color4_label">Yellow</string>
    <string name="Pla1_color4" translatable="false">4</string>

    <string name="Pla1_name">Player 1</string>
    <string name="Pla1_name_key" translatable="false">Pla1_name_key</string>
    <string name="Pla1_name_for">Name for Player 1</string>

    <string name="Pla2_color_for">. . . color for Player 2</string>
    <string name="Pla2_color_key" translatable="false">Pla2_color_key</string>
    <string name="Pla2_color1_label">Blue</string>
    <string name="Pla2_color1" translatable="false">1</string>
    <string name="Pla2_color2_label">Reed</string>
    <string name="Pla2_color2" translatable="false">2</string>
    <string name="Pla2_color3_label">Green</string>
    <string name="Pla2_color3" translatable="false">3</string>
    <string name="Pla2_color4_label">Yellow</string>
    <string name="Pla2_color4" translatable="false">4</string>

    <string name="Pla2_name">Player 2</string>
    <string name="Pla2_name_key" translatable="false">Pla2_name_key</string>
    <string name="Pla2_name_for">Name for Player 2</string>

    <!-- Texts for activity_main.xml-->
    <string name="app_name">TickTackToe</string>
    <string name="Title">TICK-TACK-TOE</string>
    <string name="Player1">1 Player</string>
    <string name="Player2">2 Player</string>
    <string name="easy_difficulty">Easy</string>
    <string name="medium_difficulty">Medium</string>
    <string name="impossible_difficulty">Hard</string>

    <!-- Texts for code -->
    <string name="name_Player0">No Players</string>
    <string name="name_Player1">Player 1</string>
    <string name="name_Player2">Player 2</string>
    <string name="winner">THE WINNER IS... </string>
</resources>

